--- a/public/css/manage.css
+++ b/public/css/manage.css
@@ -171,6 +171,9 @@ h1{
     box-sizing: border-box;
     overflow: hidden;
 }
+.content-area h1{
+    margin-top: 200px;
+}
 
 /* 数据搜索 */
 .date-search{
@@ -194,7 +197,7 @@ table th{
     text-align: center;
     height: 33px;
 }
-table th:first-child{
+/* table th:first-child{
     width: 45px;
 }
 table th:nth-child(2){
@@ -217,17 +220,17 @@ table th:nth-child(8){
 }
 table th:nth-child(9){
     width: 140px;
-}
+} */
 table td{
     color: #777;
     overflow: hidden;
 }
-table td:nth-child(3){
+/* table td:nth-child(3){
     font-size: 10px;
 }
 table td:nth-child(6){
     font-size: 10px;
-}
+} */
 table tr{
     height: 33px;
     box-sizing: border-box;
@@ -281,4 +284,151 @@ table tr td:last-child a:last-child::before{
     height: 92px;
     margin-top: 3px;
     text-align: center;
+}
+
+
+/* mask */
+.mask{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background: rgba(0, 0, 0, .3);
+    
+}
+/* mask-news */
+.mask-news{
+    display: none;
+}
+.news-box{
+    width: 700px;
+    height: 700px;
+    background: #fff;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .3);
+    padding: 20px;
+    overflow: auto;
+}
+.news-box .close{
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-align: center; 
+    cursor: pointer;
+}
+.news-box .close::after{
+    font-family: 'icomoon';
+    content: '\ea0f';
+    line-height: 30px;
+}
+.news-box h1{
+    margin-bottom: 15px;
+}
+.news-box .news-title span{
+    color: #767676;
+}
+.news-box .news-title span:first-child{
+    border: 1px #767676 solid;
+    font-size: 12px;
+}
+.news-box .p{
+    margin-top: 30px;
+}
+.news-box p{
+    color: #212121;
+    font-size: 16px;
+    margin-top: 15px;
+    line-height: 28px;
+}
+.news-box p i{
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    background-size: 20px 20px;
+    margin-right: 3px;
+    vertical-align: middle;
+    padding-top: -5px;
+    position: relative;
+    top: -2px;
+}
+.news-box img{
+    display: block;
+    width: 500px;
+    height: 400px;
+    margin: 30px auto;
+}
+/* mask-comment */
+.mask-comment{
+    display: none;
+}
+.comment-box{
+    width: 600px;
+    height: 500px;
+    background: #fff;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .3);
+    padding: 20px;
+    padding-top: 30px;
+    overflow: auto;
+}
+.comment-box .close{
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-align: center; 
+    cursor: pointer;
+}
+.comment-box .close::after{
+    font-family: 'icomoon';
+    content: '\ea0f';
+    line-height: 30px;
+}
+/* mask-users */
+.mask-users{
+    display: none;
+}
+.users-box{
+    width: 600px;
+    height: 620px;
+    background: #fff;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .3);
+    padding: 20px;
+    padding-top: 30px;
+    overflow: auto;
+}
+.users-box .close{
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-align: center; 
+    cursor: pointer;
+}
+.users-box .close::after{
+    font-family: 'icomoon';
+    content: '\ea0f';
+    line-height: 30px;
 }
