--- a/views/manage.html
+++ b/views/manage.html
@@ -79,6 +79,26 @@
         </div>
     </div>
 
+    <!-- 管理用户 -->
+    <div class="mask-users">
+        <div class="mask"></div>
+        <div class="users-box">
+        </div>
+    </div>
+
+    <!-- 管理新闻 -->
+    <div class="mask-news">
+        <div class="mask"></div>
+        <div class="news-box">
+        </div>
+    </div>
+
+    <!-- 管理评论 -->
+    <div class="mask-comment">
+        <div class="mask"></div>
+        <div class="comment-box">
+        </div>
+    </div>
 
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../public/js/jquery.pagination.js"></script>
